k8s/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: openwebui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
